# wasm-game-of-life

./: Cargo.toml  LICENSE_MIT
src/: lib.rs
tests/: web.rs
www/: index.html  index.js  package-lock.json
